--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Trabalho Prático 1</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
+    <div class="menu">
+      <ul>
+        <li>
+          <a href="index.html"> L O G O </a>
+        </li>
+      </ul>
+    </div>
 
   </body>
 </html>
