--- a/index.html
+++ b/index.html
@@ -5,15 +5,26 @@
     <title>Trabalho Prático 1</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   </head>
   <body>
-    <div class="menu">
-      <ul>
-        <li>
-          <a href="index.html"> L O G O </a>
-        </li>
-      </ul>
+    <div class="element">
+      <div class="menu">
+        <ul>
+          <li>
+            <a class="logo" href="index.html"> L O G O </a>
+            <a class="menu_right" href="contactos.html">Contactos</a>
+            <a class="menu_right" href="bandas.html">Bandas</a>
+            <a class="menu_right" href="sobre.html">Sobre</a>
+            <a class="menu_right" href="index.html">Página principal</a>
+          </li>
+        </ul>
+      </div>
     </div>
-
+    <div class="corpo">
+      <h1>Bandas de Música</h1>
+      <p>This is a sample text about our website</p>
+      <a href="sobre.html" class="botão"> Sobre nós </a>
+    </div>
   </body>
 </html>
