Acabamento do bandas e criação da subpagina banda 1

--- a/bandas.html
+++ b/bandas.html
@@ -28,23 +28,24 @@
 
         <div class="um">
           <img src="./img/bandas.jpg" alt="">
-          <h1>Banda 1</h1>
+          <a href="banda1.html">Banda 1</a>
           <p>Descrição da Banda</p>
         </div>
         <div class="dois">
           <img src="./img/bandas.jpg" alt="">
-          <h1>Banda 2</h1>
+          <a href="#">Banda 2</a>
           <p>Descrição da Banda</p>
         </div>
-        <!-- <div class="tres">
+        <div class="tres">
           <img src="./img/bandas.jpg" alt="">
+          <a href="#">Banda 3</a>
           <p>Descrição da Banda</p>
         </div>
         <div class="quatro">
           <img src="./img/bandas.jpg" alt="">
+          <a href="#">Banda 4</a>
           <p>Descrição da Banda</p>
-        </div>!-->
+        </div>
       </div>
-
   </body>
 </html>
