--- a/bandas.html
+++ b/bandas.html
@@ -25,26 +25,27 @@
 
       <div class="corpotudotexto">
         <div class="topo"><h1>Bandas</h1></div>
-
-        <div class="um">
-          <img src="./img/bandas.jpg" alt="">
-          <a href="banda1.html">Banda 1</a>
-          <p>Descrição da Banda</p>
-        </div>
-        <div class="dois">
-          <img src="./img/bandas.jpg" alt="">
-          <a href="#">Banda 2</a>
-          <p>Descrição da Banda</p>
-        </div>
-        <div class="tres">
-          <img src="./img/bandas.jpg" alt="">
-          <a href="#">Banda 3</a>
-          <p>Descrição da Banda</p>
-        </div>
-        <div class="quatro">
-          <img src="./img/bandas.jpg" alt="">
-          <a href="#">Banda 4</a>
-          <p>Descrição da Banda</p>
+        <div class="imagens">
+          <div class="um">
+            <img src="./img/bandas.jpg" alt="">
+            <a href="banda1.html">Banda 1</a>
+            <p>Descrição da Banda</p>
+          </div>
+          <div class="dois">
+            <img src="./img/bandas.jpg" alt="">
+            <a href="#">Banda 2</a>
+            <p>Descrição da Banda</p>
+          </div>
+          <div class="tres">
+            <img src="./img/bandas.jpg" alt="">
+            <a href="#">Banda 3</a>
+            <p>Descrição da Banda</p>
+          </div>
+          <div class="quatro">
+            <img src="./img/bandas.jpg" alt="">
+            <a href="#">Banda 4</a>
+            <p>Descrição da Banda</p>
+          </div>
         </div>
       </div>
   </body>
