Esboço final do trabalho
Contém todas as páginas pretendidas, no entanto falta a configuração das divs.

--- a/bandas.html
+++ b/bandas.html
@@ -25,24 +25,30 @@
 
       <div class="corpotudotexto">
         <div class="topo"><h1>Bandas</h1></div>
-        <div class="imagens">
+        <div class="imagensesquerda">
           <div class="um">
-            <img src="./img/bandas.jpg" alt="">
+            <img src="./img/bandas.jpg" alt="banda um">
             <a href="banda1.html">Banda 1</a>
             <p>Descrição da Banda</p>
           </div>
+        </div>
+        <div class="imagensdireita">
           <div class="dois">
-            <img src="./img/bandas.jpg" alt="">
+            <img src="./img/bandas.jpg" alt="banda dois">
             <a href="#">Banda 2</a>
             <p>Descrição da Banda</p>
           </div>
+        </div>
+        <div class="imagensesquerda">
           <div class="tres">
-            <img src="./img/bandas.jpg" alt="">
+            <img src="./img/bandas.jpg" alt="banda tres">
             <a href="#">Banda 3</a>
             <p>Descrição da Banda</p>
           </div>
+        </div>
+        <div class="imagensdireita">
           <div class="quatro">
-            <img src="./img/bandas.jpg" alt="">
+            <img src="./img/bandas.jpg" alt="banda quatro">
             <a href="#">Banda 4</a>
             <p>Descrição da Banda</p>
           </div>
