--- a/banda1.html
+++ b/banda1.html
@@ -26,12 +26,30 @@
     <div class="corpotudotexto">
       <div class="header">
         <h1>Banda 1</h1>
-        <img src="./img/banda1.jpg" alt="">
+        <img src="./img/banda1.jpg" alt="imagem da banda">
       </div>
-      <div class="informação1"></div>
-      <div class="informação2"></div>
-      <div class="informação3"></div>
-      <div class="informação4"></div>
+      <div class="informação">
+        <div class="informação1">
+          <h2>Disc 1</h2>
+          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+          <img src="./img/banda1.jpg" alt="imagem um">
+         </div>
+        <div class="informação2">
+          <h2>Disc 2</h2>
+          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+          <img src="./img/banda1.jpg" alt="imagem dois">
+        </div>
+        <div class="informação3">
+          <h2>Disc 3</h2>
+          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+          <img src="./img/banda1.jpg" alt="imagem tres">
+        </div>
+        <div class="informação4">
+          <h2>Disc 4</h2>
+          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+          <img src="./img/banda1.jpg" alt="imagem quatro">
+        </div>
+      </div>
     </div>
 
   </body>
