--- a/contactos.html
+++ b/contactos.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Banda 1</title>
+  <title>Contactos</title>
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -26,10 +26,15 @@
     <div class="corpotudotexto">
         <div class="left">
           <h1>Contactos</h1>
-          <p> Nome: João Saraiva </p>
-          <p> E-Mail: a15326@alunos.ipca.pt </p>
-          <p> Número: 912345678 </p>
-          <p> Observações: Sou aluno do IPCA </p>
+          <p> Nome: </p>
+          <input style="width: 100%; margin-top: 5px; padding: 5px; font-family: 'Montserrat', sans-serif; font-size: 16px; overflow: hidden;" type="text" name="Nome" value="">
+          <p> E-Mail: </p>
+          <input style="width: 100%; margin-top: 5px; padding: 5px; font-family: 'Montserrat', sans-serif; font-size: 16px; overflow: hidden;" type="email" name="Email" value="">
+          <p> Número: </p>
+          <input style="width: 100%; margin-top: 5px; padding: 5px; font-family: 'Montserrat', sans-serif; font-size: 16px; overflow: hidden;" type="tel" name="Numero" value="">
+          <p> Observações: </p>
+          <input style="width: 100%; margin-top: 5px; padding: 5px; font-family: 'Montserrat', sans-serif; font-size: 16px; padding-bottom: 50px; overflow: hidden;" type="text" name="Observacao" value="">
+          <input style="width: 102%; background-color: rgb(44, 44, 48); color: #fff; padding: 14px 20px; margin: 30px 0; border: none; border-radius: 4px; cursor: pointer;" type="submit" value="Submit">
         </div>
         <div class="right">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2986.252298888715!2d-8.423386484070184!3d41.54213417925033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd24feb24ee2c661%3A0x4abc4dc9b87330b2!2sIdite+Minho-+Instituto+De+Desenvolvimento+E+Inova%C3%A7%C3%A3o+Tecnol%C3%B3gica!5e0!3m2!1spt-PT!2spt!4v1508857305590" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
