--- a/bandas.html
+++ b/bandas.html
@@ -27,10 +27,10 @@
         <div class="topo"><h1>Bandas</h1></div>
         <div class="imagensesquerda">
           <div class="um">
-            <img src="./img/bandas.jpg" alt="banda um">
+            <img src="./img/bandas.jpg" alt="banda um"><br>
             <a href="banda1.html">Banda 1</a>
             <p>Descrição da Banda</p>
-            <img src="./img/bandas.jpg" alt="banda tres">
+            <img src="./img/bandas.jpg" alt="banda tres"><br>
             <a href="#">Banda 3</a>
             <p>Descrição da Banda</p>
           </div>
