@media 800px pronto

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         </ul>
       </div>
     </div>
+
+    <div class="hamburguer"></div>
+
     <div class="corpo">
       <h1>Bandas de Música</h1>
       <p>This is a sample text about our website</p>
