--- a/sobre.html
+++ b/sobre.html
@@ -18,6 +18,7 @@
             <a class="menu_right" href="bandas.html">Bandas</a>
             <a class="menu_right" href="sobre.html">Sobre</a>
             <a class="menu_right" href="index.html">Página principal</a>
+            <a class="hamburguer" href="#"><img src="Hamburguer.png" alt="hamburguer"></a>
           </li>
         </ul>
       </div>
@@ -30,7 +31,7 @@
             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
           </div>
-          
+
           <div class="right">
             <img src="./img/sobrenos.jpg" alt="Sobre nós">
             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
