mudanças no hamburguer

--- a/index.html
+++ b/index.html
@@ -12,18 +12,16 @@
       <div class="menu">
         <ul>
           <li>
+            <img class="hamburguer" src="./img/Hamburger.png" alt="">
             <a class="logo" href="index.html"> L O G O </a>
             <a class="menu_right" href="contactos.html">Contactos</a>
             <a class="menu_right" href="bandas.html">Bandas</a>
             <a class="menu_right" href="sobre.html">Sobre</a>
             <a class="menu_right" href="index.html">Página principal</a>
-            <img class="hamburguer" src="./img/Hamburger.png" alt="hamburguer">
           </li>
         </ul>
       </div>
     </div>
-
-    <div class="hamburguer"></div>
 
     <div class="corpo">
       <h1>Bandas de Música</h1>
