--- a/sobre.html
+++ b/sobre.html
@@ -13,12 +13,12 @@
       <div class="menu">
         <ul>
           <li>
+            <img class="hamburguer" src="./img/Hamburger.png" alt="">
             <a class="logo" href="index.html"> L O G O </a>
             <a class="menu_right" href="contactos.html">Contactos</a>
             <a class="menu_right" href="bandas.html">Bandas</a>
             <a class="menu_right" href="sobre.html">Sobre</a>
             <a class="menu_right" href="index.html">Página principal</a>
-            <a class="hamburguer" href="#"><img src="Hamburguer.png" alt="hamburguer"></a>
           </li>
         </ul>
       </div>
