--- a/PW15326TP1/index.html
+++ b/PW15326TP1/index.html
@@ -16,17 +16,33 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">L O G O</a>
+          <a class="navbar-brand" href="index.html">L O G O</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li class="active"><a href="#">Página Principal</a></li>
+            <li><a href="sobrenos.html">Sobre nós</a></li>
+            <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Bandas <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Banda 1</a></li>
+              <li><a href="#">Banda 2</a></li>
+              <li><a href="#">Banda 3</a></li>
+              <li><a href="#">Banda 4</a></li>
+            </ul>
+            </li>
+            <li><a href="#contact">Contactos</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
+    <div class="header">
+      <h1> Bandas de Música </h1>
+      <p>This is a sample text about our website</p>
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default navbar-btn">Sobre nós</button>
+      </div>
+    </div>
 
     <script src="./js/jquery-3.2.1.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
