--- a/PW15326TP1/banda1.html
+++ b/PW15326TP1/banda1.html
@@ -22,56 +22,60 @@
             <li><a href="index.html">Página Principal</a></li>
             <li><a href="sobrenos.html">Sobre nós</a></li>
             <li class="dropdown">
-            <a href="banda.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Bandas <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li class="active"><a href="banda1.html">Banda 1</a></li>
-              <li><a href="#">Banda 2</a></li>
-              <li><a href="#">Banda 3</a></li>
-              <li><a href="#">Banda 4</a></li>
-            </ul>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Bandas <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="banda1.html">Banda 1</a></li>
+                <li><a href="#">Banda 2</a></li>
+                <li><a href="#">Banda 3</a></li>
+                <li><a href="#">Banda 4</a></li>
+              </ul>
             </li>
-            <li><a href="#contact">Contactos</a></li>
+            <li><a href="contactos.html">Contactos</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
     <div class="corpo">
+    <div class="container">
       <h1> Banda 1 </h1>
-      <img class="banda1" src="./img/preto.jpg" alt="banda1">
-
       <div class="row">
-        <div class="col-sm-6 col-md-2">
+      <img class="banda1 col-md-12" src="./img/preto.jpg" alt="banda1">
+
+
+        <div class="um col-sm-6 col-md-3">
           <img src="./img/preto.jpg" alt="disc1">
             <div class="caption">
               <h3>Disc 1</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
             </div>
         </div>
-        <div class="col-sm-6 col-md-2">
+        <div class="col-md-3">
           <img src="./img/preto.jpg" alt="disc1">
             <div class="caption">
-              <h3>Disc 1</h3>
+              <h3>Disc 2</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
             </div>
         </div>
-        <div class="col-sm-6 col-md-2">
+        <div class="col-md-3">
           <img src="./img/preto.jpg" alt="disc1">
             <div class="caption">
-              <h3>Disc 1</h3>
+              <h3>Disc 3</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
             </div>
         </div>
-        <div class="col-sm-6 col-md-2">
+        <div class="quatro col-md-3">
           <img src="./img/preto.jpg" alt="disc1">
             <div class="caption">
-              <h3>Disc 1</h3>
+              <h3>Disc 4</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
             </div>
         </div>
       </div>
 
       </div>
-
+</div>
+<script src="./js/jquery-3.2.1.min.js"></script>
+<script src="./js/bootstrap.min.js"></script>
   </body>
 </html>
